--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=h-postgres
-DB_PORT=5432
-DB_DATABASE=helastel
+DB_CONNECTION=mysql
+DB_HOST=ml-mysql
+DB_PORT=3306
+DB_DATABASE=database
 DB_USERNAME=root
 DB_PASSWORD=root
 
